5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1602_2895.log
== SUBMITION (2019-03-20 18:47:15) 
-- CODE:
varA = float(input("informe o valor do jogo: "))
varB = float(input("informe o valor do jogo: "))
varC = float(input("informe o valor do jogo: "))
total= (varA *VarB)+varC)
print(total)
-- EXECUTION TIME:
0.169057
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 4
    total= (varA *VarB)+varC)
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:49:23) 
-- CODE:
varA = float(input("quantos jogo serem comprado?:"))
varB = float(input("o valor unitario de cada jogo: "))
varC = float(input("o valor do frete: "))
total= (varA*VarB)+varC)
print(total)
-- EXECUTION TIME:
0.173704
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 4
    total= (varA*VarB)+varC)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:49:46) 
-- CODE:
varA = float(input("quantos jogo serem comprado?:"))
varB = float(input("o valor unitario de cada jogo:"))
varC = float(input("o valor do frete:"))
total= (varA*varB)+varC)
print(total)
-- EXECUTION TIME:
0.139447
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 4
    total= (varA*varB)+varC)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:49:48) 
-- CODE:
varA = float(input("quantos jogo serem comprado?:"))
varB = float(input("o valor unitario de cada jogo:"))
varC = float(input("o valor do frete:"))
total= (varA*varB)+varC)
print(total)
-- EXECUTION TIME:
0.138834
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 4
    total= (varA*varB)+varC)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:49:52) 
-- CODE:
varA = float(input("quantos jogo serem comprado?:"))
varB = float(input("o valor unitario de cada jogo:"))
varC = float(input("o valor do frete:"))
total= (varA*varB)+varC)
print(total)
-- EXECUTION TIME:
0.156072
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 4
    total= (varA*varB)+varC)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:50:12) 
-- CODE:
varA = float(input("quantos jogo serem comprado?:"))
varB = float(input("o valor unitario de cada jogo:"))
varC = float(input("o valor do frete:"))
total= ((varA*varB)+varC)
print(total)
-- EXECUTION TIME:
0.127219
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:50:13) 
-- CODE:
varA = float(input("quantos jogo serem comprado?:"))
varB = float(input("o valor unitario de cada jogo:"))
varC = float(input("o valor do frete:"))
total= ((varA*varB)+varC)
print(total)
-- EXECUTION TIME:
0.115771
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
